<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.activities.DetailActivity"
    tools:showIn="@layout/content_detail"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_author_detail"
            android:text="@string/default_author"
            android:layout_margin="@dimen/textview_margin_large"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_source_detail"
            android:text="@string/default_source_name"
            android:layout_margin="@dimen/textview_margin_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_author_detail"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_publish_at_detail"
            android:text="@string/default_publish_at"
            android:layout_margin="@dimen/textview_margin_large"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_source_detail"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_content_detail"
            android:text="@string/default_content"
            android:layout_margin="@dimen/textview_margin_large"
            app:layout_constraintTop_toBottomOf="@id/tv_publish_at_detail"
            android:textColor="@color/black"
            android:justificationMode="inter_word"
            android:lineSpacingExtra="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_url_detail"
            android:text="@string/default_url"
            android:layout_margin="@dimen/textview_margin_large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_content_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>